--- a/wisdomCampus/html/index/home.html
+++ b/wisdomCampus/html/index/home.html
@@ -144,10 +144,11 @@
 					<p class="user-name">{{userName}}</p>
 				</div>
 				<a v-for="setting in settings" class="weui-cell weui-cell_access" v-on:click="jumpToDetail(setting)">
-					<div class="weui-cell__bd">
-						<p><span></span>{{setting.name}}</p>
-					</div>
-					<div class="weui-cell__ft"></div>
+					<div class="weui-cell__hd">
+						<img style="width: 20px;height: 20px;margin-top: 5px;" :src=setting.icon></div>
+ 					<div class="weui-cell__bd">
+						<p style="color: black;margin-left: 5px;font-size: 16px;margin-top: 10px;">{{setting.name}}</p>
+ 					</div>
 				</a>
 				<a class="weui-btn weui-btn_warn" v-on:click="quitLogin">
 					退出登录
@@ -234,7 +235,6 @@
 					return false;
 				};
 				document.addEventListener("netchange", wainshow, false);
-
 				function wainshow() {
 					if(plus.networkinfo.getCurrentType() == plus.networkinfo.CONNECTION_NONE) {
 						mui.toast("网络异常，请检查网络设置！");
@@ -249,7 +249,6 @@
 				//12.获取学校资源平台信息
 				getSchoolInfoSource();
 			});
-
 			//12.获取学校资源平台信息
 			var getSchoolInfoSource = function() {
 				var publicParameter = store.get(window.storageKeyName.PUBLICPARAMETER);
@@ -274,18 +273,15 @@
 							}
 						}
 					} else {
-
 					}
 				});
 			}
-
 			window.addEventListener('setHeadImg', function(data) {
 				console.log("data" + JSON.stringify(data.detail.imgurl))
 				mine.userImg = data.detail.imgurl;
 				mine1.userImg = data.detail.imgurl;
 			});
 				
-
 			//推送绑定
 			var bindInfo = function() {
 				var tempInfo00 = store.get(window.storageKeyName.PERSONALINFO);
@@ -315,7 +311,6 @@
 			slider.slider({
 				interval: 5000
 			});
-
 			mui(".mui-table-view").on('tap', 'a', function() {
 				var id = this.parentElement.id;
 				if(id == 1 || id == 2) {
@@ -333,7 +328,6 @@
 					} else {
 						mui.toast("此功能被关闭");
 					}
-
 					//					utils.hrefSessionStorage("all.html", id);
 				} else {
 					if(id == 6) {
@@ -391,20 +385,18 @@
 				el: "#mine",
 				data: {
 					userName: tempName,
-					userImg:setImg(personal.imgurl),
-					settings: [
-											{
-												name: "密码修改",
-												icon: "",
-												href: "",
-												tempID:0
-											}, {
-												name: "关于我们",
-												icon: "",
-												href: "",
-												tempID:1
-											}
-					],
+					userImg: setImg(personal.imgurl),
+					settings: [{
+						name: "密码修改",
+						icon: "../../img/login/lock.png",
+						href: "",
+						tempID: 0
+					}, {
+						name: "关于我们",
+						icon: "../../img/login/mine.png",
+						href: "",
+						tempID: 1
+					}],
 					isMineShow: false //屏蔽或显示我的界面
 				},
 				methods: {
@@ -426,7 +418,6 @@
 						utils.setBadgeNumber(0, 0);
 						//将个人信息存入原生app
 						if(utils.getSystem() == 'Android') {
-
 						} else {
 							//							window.webkit.messageHandlers.setInfo.postMessage('');
 						}
@@ -454,7 +445,6 @@
 				//获取未读数
 				getNoReadCnt();
 			});
-
 			//获取未读数
 			var getNoReadCnt = function() {
 				console.log('updateNoRead0000000000000000');
@@ -488,7 +478,6 @@
 						}
 					}
 				});
-
 				tempData = {
 					schoolId: storageKeyName.SCHOOLID, //学校ID
 					approveManId: personal.utid
@@ -511,13 +500,11 @@
 						} else {
 							tempCount = data.RspData.NoApproveCnt;
 						}
-
 						if(data.RspData.NoReadCnt != 0) {
 							noRead.className = "mui-badge"
 						}
 					}
 				});
-
 			}
 		</script>
 	</body>
