修改需要照片地方的调用显示

--- a/wisdomCampus/html/checkNotice/all-list.html
+++ b/wisdomCampus/html/checkNotice/all-list.html
@@ -443,6 +443,7 @@
 									}
 									callback(data.RspData.Data)
 								}else{
+									mui.toast(data.RspTxt);
 									pullRefresh.endPullDownToRefresh();
 									pullRefresh.endPullUpToRefresh();
 								}
@@ -479,6 +480,7 @@
 									}
 									callback(data.RspData.Data)
 								}else{
+									mui.toast(data.RspTxt);
 									pullRefresh.endPullDownToRefresh();
 									pullRefresh.endPullUpToRefresh();
 								}
@@ -511,6 +513,7 @@
 									}
 									callback(data.RspData.Data)
 								}else{
+									mui.toast(data.RspTxt);
 									pullRefresh.endPullDownToRefresh();
 									pullRefresh.endPullUpToRefresh();
 								}
@@ -555,6 +558,7 @@
 									}
 									callback(data.RspData.Data)
 								}else{
+									mui.toast(data.RspTxt);
 									pullRefresh.endPullDownToRefresh();
 									pullRefresh.endPullUpToRefresh();
 								}
