--- a/wisdomCampus/html/index/home.html
+++ b/wisdomCampus/html/index/home.html
@@ -429,7 +429,8 @@
 						this.isMineShow = false;
 //						location.href = setting.href;
 						if (setting.tempID ==0) {
-							utils.mOpenWithData("../../html/mine/redirectPassword.html", setting);
+							utils.mOpenWithData("../../html/mine/modifyPassword.html", setting);
+//							utils.mOpenWithData("../../html/mine/redirectPassword.html", setting);
 						} else if (setting.tempID ==1) {
 							utils.mOpenWithData("../../html/mine/about.html", setting);
 						}
