--- a/wisdomCampus/html/mine/headImg.html
+++ b/wisdomCampus/html/mine/headImg.html
@@ -61,7 +61,7 @@
 				console.log('personal:' + JSON.stringify(personal));
 
 				peopleInfo.peopleHeadImg = setImg(personal.imgurl);
-				peopleInfo.peopleName = personal.utname;
+				peopleInfo.peopleName = personal.uid;
 			});
 			var peopleInfo = new Vue({
 				el: "#peopleInfo",
