--- a/wisdomCampus/html/mine/redirectPassword.html
+++ b/wisdomCampus/html/mine/redirectPassword.html
@@ -44,6 +44,8 @@
         	mui.plusReady(function(){
 				plus.nativeUI.closeWaiting();
     			mui.currentWebview.show();
+    			var tempBtn = document.getElementById("btndoreset");
+    			tempBtn.style = 'display: none;';
         	});
 		</script>
 	</body>
