--- a/wisdomCampus/html/mine/about.html
+++ b/wisdomCampus/html/mine/about.html
@@ -10,19 +10,21 @@
 			.mui-bar-nav {
 				background-color: #63BBFF;
 			}
+			
 			.head-img {
 				width: 140px;
 				height: 140px;
 				margin: 0 auto;
 			}
-			.bottom-text{
-				position:fixed;
-				margin-left:auto;
+			
+			.bottom-text {
+				position: fixed;
+				margin-left: auto;
 				margin-right: auto;
-				left:0;
-				right:0;
-				bottom:0;
-				width:100%;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				width: 100%;
 				text-align: center;
 			}
 		</style>
@@ -42,29 +44,39 @@
 			</div>
 			<div class="mui-row" style="margin-top: 15px;">
 				<ul class="mui-table-view mui-table-view-chevron">
-					<li class="mui-table-view-cell">
+					<li class="mui-table-view-cell" id="qqqq">
 						<a href="javaScript:void(0)" class="mui-navigate-right">功能介绍</a>
 					</li>
-					<li class="mui-table-view-cell">
+					<li class="mui-table-view-cell" id="wwww">
 						<a href="javaScript:void(0)" class="mui-navigate-right">公司介绍</a>
 					</li>
-					<li class="mui-table-view-cell">
+					<li class="mui-table-view-cell" id="eeee">
 						<a href="javaScript:void(0)" class="mui-navigate-right">帮助</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 		<div class="mui-row bottom-text">
-					<p class='mui-ellipsis'>Copyright&copy;2006-2018</p>
-					<p class='mui-ellipsis'>山东金视野教育股份科技有限公司</p>
-			</div>
+			<p class='mui-ellipsis'>Copyright&copy;2006-2018</p>
+			<p class='mui-ellipsis'>山东金视野教育科技股份有限公司</p>
+		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/jquery.min.js"></script>
 		<script type="text/javascript">
 			mui.init()
-			
-			mui.plusReady(function(){
-				$('#version').html('智慧校园'+plus.runtime.version)
+
+			mui.plusReady(function() {
+				$('#version').html('智慧校园' + plus.runtime.version)
+			});
+
+			document.getElementById('qqqq').addEventListener('tap', function() {
+				mui.toast('功能暂未开放');
+			});
+			document.getElementById('wwww').addEventListener('tap', function() {
+				mui.toast('功能暂未开放');
+			});
+			document.getElementById('eeee').addEventListener('tap', function() {
+				mui.toast('功能暂未开放');
 			});
 		</script>
 	</body>
