--- a/wisdomCampus/html/checkNotice/selectPeople.html
+++ b/wisdomCampus/html/checkNotice/selectPeople.html
@@ -53,11 +53,11 @@
 				background-color: #fff;
 			}
 			
-			.mui-pull-left{
+			.mui-pull-left {
 				margin-left: -50px;
 			}
 			
-			.mui-ellipsis{
+			.mui-ellipsis {
 				font-size: 16px;
 				color: black;
 				margin-top: 10px;
@@ -84,10 +84,6 @@
 								<img v-if="department.departFlag==1" class="mui-media-object mui-pull-left" @tap.stop="clickDepartmentSelect1(department,index)" src="../../img/firstPage/select.png">
 								<p class="mui-ellipsis">{{department.dptname}}</p>
 							</a>
-							<!--<a class="mui-input-row mui-checkbox mui-left">
-								<a class=" mui-navigate-right" style="margin-left: -60px;margin-top: -20px;">{{department.dptname}}</a>
-								<input name="checkbox2" value="Item 1" type="checkbox" style="padding-top: 3px;" v-model="department.departFlag" @tap="clickDepartmentSelect1(department,index)">
-							</a>-->
 							<ul class="mui-table-view mui-table-view-chevron" style="margin-left: -60px;">
 								<li class="mui-table-view-cell" v-for="(peopleModel,index) in department.peopleArray" @tap="clickPeople(peopleModel,index)" style="height: 50px;">
 									<a class="mui-input-row mui-checkbox mui-left">
@@ -103,10 +99,6 @@
 								<img v-if="department.departFlag==1" class="mui-media-object mui-pull-left" @tap.stop="clickDepartmentSelect1(department,index)" src="../../img/firstPage/select.png">
 								<p class="mui-ellipsis">{{department.clsname}}</p>
 							</a>
-							<!--<a class="mui-input-row mui-checkbox mui-left">
-								<a class=" mui-navigate-right" style="margin-left: -60px;margin-top: -20px;">{{department.clsname}}</a>
-								<input name="checkbox2" value="Item 1" type="checkbox" style="padding-top: 3px;" v-model="department.departFlag" @tap="clickDepartmentSelect1(department,index)">
-							</a>-->
 							<ul class="mui-table-view mui-table-view-chevron" style="margin-left: -60px;">
 								<li class="mui-table-view-cell" v-for="(peopleModel,index) in department.peopleArray" @tap="clickPeople(peopleModel,index)" style="height: 50px;">
 									<a class="mui-input-row mui-checkbox mui-left">
@@ -120,42 +112,6 @@
 				</ul>
 			</template>
 		</div>
-		<!--<div class="mui-content" id="selectPeopleData" v-show="flag>0" style="background-color: white;">
-			<template>
-				<ul class="mui-table-view tableView">
-					<li class="mui-table-view-cell mui-collapse mui-checkbox mui-left keep-unfold" v-for='(department,index) in departmentArray' @tap="clickDepartment(department,index)" style="background-color: white;">
-						<template v-if='department.dptname'>
-							<input name="checkbox2" value="Item 2" type="checkbox" v-model="department.departFlag" @tap="clickDepartmentSelect1(department,index)">
-							<a class="mui-navigate-right" style="padding-left: 17px;">{{department.dptname}}</a>
-							<div class="mui-collapse-content">
-								<form class="mui-input-group mui-table-view-chevron" v-for="(peopleModel,index) in department.peopleArray" @tap="clickPeople(peopleModel,index)">
-									<div class="mui-input-row mui-checkbox" style="height: 50px;padding-top: 5px;">
-										<label>{{peopleModel.utname}}</label>
-										<input name="checkbox1" value="Item 3" type="checkbox" v-model="peopleModel.flag">
-									</div>
-								</form>
-							</div>
-						</template>
-						<template v-else>
-							<input name="checkbox2" value="Item 2" type="checkbox" v-model="department.departFlag" @tap="clickDepartmentSelect1(department,index)">
-							<a class="mui-navigate-right" style="padding-left: 17px;">{{department.clsname}}</a>
-							<div class="mui-collapse-content">
-								<form class="mui-input-group mui-table-view-chevron" v-for="(peopleModel,index) in department.peopleArray" @tap="clickPeople(peopleModel,index)">
-									<div class="mui-input-row mui-checkbox" style="height: 50px;padding-top: 5px;">
-										<label>{{peopleModel.utname}}</label>
-											<input name="checkbox1" value="Item 3" type="checkbox" v-model="peopleModel.flag">
-									</div>
-								</form>
-							</div>
-						</template>
-					</li>
-				</ul>
-				<nav class="mui-bar mui-bar-tab">
-					<a v-if="selectPeopleArray.length > 0" @click="clickSubmitBtn()" class="weui-btn weui-btn_blue">确定({{selectPeopleArray.length}}人)</a>
-					<a v-else @click="clickSubmitBtn()" class="weui-btn weui-btn_blue">确定({{selectPeopleArray.length}}人)</a>
-				</nav>
-			</template>
-		</div>-->
 		<script src="../../js/mui.js"></script>
 		<script src="../../js/vue.min.js"></script>
 		<!--加密-->
@@ -216,8 +172,21 @@
 						if(selectPeopleData.selectPeopleArray.length == 0) { //判断有没有勾选人
 							mui.toast('请选择人员', "cancel");
 						} else {
+							var tempdeptArray = [];
+							//全选的部门id
+							for(var i = 0; i < selectPeopleData.departmentArray.length; i++) {
+								var depModel = selectPeopleData.departmentArray[i];
+								if(depModel.departFlag) {
+									if(depModel.dptid) {
+										tempdeptArray.push(depModel.dptid);
+									} else {
+										tempdeptArray.push(depModel.clsid);
+									}
+								}
+							}
 							console.log(1111111)
 							mui.fire(plus.webview.currentWebview().opener(), 'selectPeople', {
+								departArray: tempdeptArray, //部门id数组
 								peopleArray: selectPeopleData.selectPeopleArray
 							});
 							mui.back();
@@ -235,6 +204,7 @@
 					}
 				}
 			});
+			var selectDepartArray = []; //全部选择人员的部门id数组
 			var systemFlag = 0; //1 通知公告,2 事务及文件
 
 			var PrivilegeStr = 0; //权限
@@ -248,7 +218,8 @@
 				systemFlag = curPage.flag; //1 通知公告,2 事务及文件
 				if(systemFlag == 1) { //如果是通知公告，加入数组
 					selectPeopleData.selectPeopleArray = [].concat(curPage.selectPeople);
-					console.log('curPage.selectPeople:' + JSON.stringify(curPage.selectPeople));
+					selectDepartArray = curPage.departArray;
+					console.log('curPage.selectDepartArray:' + JSON.stringify(selectDepartArray));
 				}
 				personal = store.get(window.storageKeyName.PERSONALINFO);
 				console.log('personal:' + JSON.stringify(personal));
@@ -256,6 +227,25 @@
 				//根据个人信息，获取权限等
 				getData();
 			});
+
+			//刚进入页面，判断部门上次是否选择
+			var selectDepartment = function() {
+				console.log('刚进入页面，判断部门上次是否选择');
+				for(var i = 0; i < selectPeopleData.departmentArray.length; i++) {
+					var tempModel = selectPeopleData.departmentArray[i]
+					var tempFlag000 = 0;
+					for(var a = 0; a < selectDepartArray.length; a++) {
+						if(tempModel.dptid == selectDepartArray[a] || tempModel.clsid == selectDepartArray[a]) {
+							tempFlag000++;
+						}
+					}
+					if(tempFlag000 > 0) {
+						tempModel.departFlag = 1;
+					} else {
+						tempModel.departFlag = 0;
+					}
+				}
+			}
 
 			//根据个人信息，获取权限等
 			var getData = function() {
@@ -419,6 +409,7 @@
 			//点击部门，包括点击是否选择部门----flag=0点击部门，flag=1点击选中部门，flag=2取消选中部门
 			var clickDepartmentSelect = function(model, index, flag) {
 				console.log('tempFlag111:' + JSON.stringify(model));
+				console.log('点击取消选择部门flag:'+flag);
 				//点击获取部门用户
 				if(model.dptname && model.peopleArray.length == 0) {
 					var enData0 = {};
@@ -459,6 +450,9 @@
 										selectPeopleData.selectPeopleArray.push(tempModel);
 										//将别的部门，对应id的人，状态改为已选中
 										changePeoPleDepartmentSelect(tempModel, index, 1);
+									} else if(flag == 2) { //点击取消选择部门
+										tempModel.flag = false;
+										changePeoPleDepartmentSelect(tempModel, index, flag);
 									}
 								}
 								model.peopleArray = [].concat(data.RspData.users);
@@ -468,7 +462,7 @@
 								}
 								//点击人员时，判断部门是否应该选中状态
 								judgeDepartmentSelect();
-							}else{
+							} else {
 								mui.toast('当前部门没有人');
 							}
 						} else {
@@ -515,6 +509,9 @@
 										selectPeopleData.selectPeopleArray.push(tempModel);
 										//将别的部门，对应id的人，状态改为已选中
 										changePeoPleDepartmentSelect(tempModel, index, 1);
+									} else if(flag == 2) { //点击取消选择部门
+										tempModel.flag = false;
+										changePeoPleDepartmentSelect(tempModel, index, flag);
 									}
 								}
 								model.peopleArray = [].concat(data.RspData.clssusers);
@@ -524,7 +521,7 @@
 								}
 								//点击人员时，判断部门是否应该选中状态
 								judgeDepartmentSelect();
-							}else{
+							} else {
 								mui.toast('当前部门没有人');
 							}
 						} else {
@@ -601,6 +598,7 @@
 							//给数组去重
 							selectPeopleData.departmentArray = selectPeopleData.departmentArray.unique('dptid');
 						}
+						selectDepartment();
 					} else {
 						mui.toast(data.RspTxt, "cancel");
 					}
@@ -622,6 +620,7 @@
 						}
 					}
 				}
+				selectDepartment();
 			}
 
 			//将本部门和下级部门，塞入数组
@@ -653,6 +652,7 @@
 					selectPeopleData.departmentArray = selectPeopleData.departmentArray.concat(tempDepartArray);
 					setSubordinateDepart(array, tempDepartArray);
 				}
+				selectDepartment();
 			}
 
 			//将上级部门，塞入数组
@@ -736,6 +736,7 @@
 								selectPeopleData.departmentArray.unshift(tempClassModel);
 								selectPeopleData.flag = 1;
 							}
+							selectDepartment();
 						} else {
 							mui.toast(data.RspTxt, "cancel");
 						}
