--- a/wisdomCampus/html/mine/modifyPassword.html
+++ b/wisdomCampus/html/mine/modifyPassword.html
@@ -62,42 +62,140 @@
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/jquery.min.js"></script>
+		<script type="text/javascript" src="../../js/lib/vconsole/vconsole.min.js"></script>
+		<script type="text/javascript" src="../../js/vue.js"></script>
+		<script src="../../js/utils/utils.js" type="text/javascript" charset="utf-8"></script>
+		<!--加密-->
+		<script src="../../js/lib/RSA/Barrett.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/lib/RSA/BigInt.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/lib/RSA/RSA.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/utils/RSAEncrypt.js" type="text/javascript" charset="utf-8"></script>
+		<!---->
+		<script src='../../js/lib/crypto-js/require.js'></script>
+		<script src='../../js/utils/signHmacSHA1.js'></script>
+		<script src='../../js/utils/sortSign.js'></script>
+		<script src="../../js/utils/storageKeyName.js"></script>
+		<script src="../../js/utils/store.js"></script>
+		<script src="../../js/publicProtocol.js"></script>
+		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/lib/jquery.js"></script>
 		<script type="text/javascript">
 			mui.init()
-			
+			mui.init();
+			var personal;
+			var publicParameter;
+			var pageFlag; //0是主动修改密码，1是判断是默认密码，自动让修改
+			mui.plusReady(function() {
+				curPage = utils.getDataFromUrl(window.location.href);
+				pageFlag = curPage.flag;
+				//获取个人信息
+				personal = store.get(window.storageKeyName.PERSONALINFO);
+				console.log('personal:' + JSON.stringify(personal));
+				publicParameter = store.get(window.storageKeyName.PUBLICPARAMETER);
+			});
 			//签到
 			function modifyPassword() {
 				var params = $('#form123').serializeObject();
+				console.log('****************' + JSON.stringify(params));
 				if(params.oldPassword == '') {
-					mui.toast('请输入密码');
+					mui.toast('请输入原密码');
+				} else if(params.oldPassword != personal.passWord0) {
+					mui.toast('原密码输入不正确');
 				} else if(params.newPassword == '') {
 					mui.toast('请输入新密码');
 				} else if(params.confirmPassword == '') {
-					mui.toast('请再次输入新密码');
-				} else if(!(params.newPassword===params.confirmPassword)){
+					mui.toast('请输入确认密码');
+				} else if(!(params.newPassword === params.confirmPassword)) {
 					mui.toast('两次输入的密码不一致');
-				} else if(params.newPassword===params.oldPassword){
+				} else if(params.newPassword === params.oldPassword) {
 					mui.toast('新密码不能与旧密码相同');
+				} else if(!checkPass(params.newPassword)) {
+					mui.toast('密码需为数字和字母的组合');
+				} else if(params.newPassword.length > 18 || params.newPassword.length < 6) {
+					mui.toast('密码长度需为6到18个字符');
 				} else {
-					console.log('****************'+JSON.stringify(params))
+					//握手
+					var enData0 = {};
+					//不需要加密的数据
+					var comData0 = {
+						uuid: publicParameter.uuid, //用户设备号
+						utid: personal.utid, //用户ID
+						type: 'upw', //修改类型，upw:密码
+						val: params.newPassword, //对应类型的值
+						utoken: personal.utoken, //用户令牌
+						appid: publicParameter.appid //系统所分配的应用ID
+					};
+					events.showWaiting();
+					if(personal.utp == 0) { //0老师，1学生，2家长
+						//发送网络请求，data为网络返回值
+						postDataEncry('UpTecInfo', enData0, comData0, 0, function(data) {
+							console.log('UpTecInfo:' + JSON.stringify(data));
+							events.closeWaiting();
+							if(data.RspCode == 0) {
+								personal.passWord0 = params.newPassword;
+								store.set(window.storageKeyName.PERSONALINFO, personal);
+								params.oldPassword = '';
+								params.newPassword = '';
+								params.confirmPassword = '';
+								if(pageFlag == 0) {
+									mui.back();
+								} else {
+									utils.hrefSessionStorage('home.html', {});
+								}
+							} else {
+								mui.toast(data.RspTxt);
+							}
+						});
+					} else {
+						//发送网络请求，data为网络返回值
+						postDataEncry('UpUserInfo', enData0, comData0, 0, function(data) {
+							console.log('UpUserInfo:' + JSON.stringify(data));
+							events.closeWaiting();
+							if(data.RspCode == 0) {
+								personal.passWord0 = params.newPassword;
+								store.set(window.storageKeyName.PERSONALINFO, personal);
+								params.oldPassword = '';
+								params.newPassword = '';
+								params.confirmPassword = '';
+								if(pageFlag == 0) {
+									mui.back();
+								} else {
+									utils.hrefSessionStorage('home.html', {});
+								}
+							} else {
+								mui.toast(data.RspTxt);
+							}
+						});
+					}
 				}
 			}
-			
-			$.fn.serializeObject = function(){
-			    var o = {};
-			    var a = this.serializeArray();
-			    $.each(a, function() {
-			        if (o[this.name] !== undefined) {
-			            if (!o[this.name].push) {
-			                o[this.name] = [o[this.name]];
-			            }
-			            o[this.name].push(this.value || '');
-			        } else {
-			            o[this.name] = this.value || '';
-			        }
-			    });
-			    return o;
+
+			//将输入表单中的内容，转为obj
+			$.fn.serializeObject = function() {
+				var o = {};
+				var a = this.serializeArray();
+				$.each(a, function() {
+					if(o[this.name] !== undefined) {
+						if(!o[this.name].push) {
+							o[this.name] = [o[this.name]];
+						}
+						o[this.name].push(this.value || '');
+					} else {
+						o[this.name] = this.value || '';
+					}
+				});
+				return o;
 			};
+
+			//判断字符串是否为数字和字母组合
+			function checkPass(password) {
+				var re = /^(?!([a-zA-Z]+|\d+)$)[a-zA-Z\d]{6,20}$/g;
+				if(!re.test(password)) {
+					return false;
+				} else {
+					return true;
+				}
+			}
 		</script>
 	</body>
 
